Dark mode fixes (#3569)
* Fix table header transparency issue in light mode and table header hover color in dark mode.

* Better popup background color.

--- a/components/frontend/src/semantic_ui_react_wrappers/Popup.css
+++ b/components/frontend/src/semantic_ui_react_wrappers/Popup.css
@@ -1,7 +1,7 @@
 .ui.inverted.popup {
-    background-color: rgba(80, 80, 80);
+    background-color: rgba(60, 65, 70);
 }
 
 .ui.inverted.top.popup:before {
-    background-color: rgba(80, 80, 80);
+    background-color: rgba(60, 65, 70);
 }
